--- a/index.html
+++ b/index.html
@@ -1,1 +1,116 @@
-<a href="shitty ai generated tool btw.html">click here</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>VSQX Phoneme Replacer</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f9f9f9;
+        }
+
+        #container {
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            background-color: #ffffff;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            font-size: 1.5em;
+            color: #333;
+            text-align: center;
+            margin-bottom: 15px;
+        }
+
+        input[type="file"], button {
+            display: block;
+            width: 100%;
+            margin: 10px 0;
+            padding: 10px;
+            font-size: 1em;
+            border-radius: 6px;
+            border: 1px solid #ccc;
+            transition: all 0.2s;
+        }
+
+        input[type="file"] {
+            border: 1px solid #bbb;
+            background-color: #f8f8f8;
+        }
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            border: 1px solid #4CAF50;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
+</head>
+<body>
+    <div id="container">
+        <h1>VSQX Phoneme Replacer</h1>
+        <p>Make sure phoneme lock isn't enabled</p>
+        <input type="file" id="file_input" accept=".vsqx">
+        <button id="process_button">Process and Download</button>
+    </div>
+    <script>
+        document.getElementById('process_button').addEventListener('click', () => {
+            const file_input = document.getElementById('file_input');
+            if (!file_input.files.length) {
+                alert("Please select a VSQX file to process.");
+                return;
+            }
+
+            const file = file_input.files[0];
+            const original_file_name = file.name.replace(".vsqx", "");
+
+            const reader = new FileReader();
+            reader.onload = function(event) {
+                const xml_text = event.target.result;
+
+                // Parse XML
+                const parser = new DOMParser();
+                const xmlDoc = parser.parseFromString(xml_text, "application/xml");
+
+                // Find all <note> elements
+                const notes = xmlDoc.getElementsByTagName('note');
+
+                for (let note of notes) {
+                    const yElement = note.getElementsByTagName('y')[0];
+                    const pElement = note.getElementsByTagName('p')[0];
+
+                    // Check if <y> contains "n" and <p> contains "u:"
+                    if (yElement && pElement && yElement.textContent === "n" && pElement.textContent === "u:") {
+                        // Replace <p><![CDATA[u:]]></p> with <p lock="1"><![CDATA[n]]></p>
+                        pElement.setAttribute("lock", "1");
+                        pElement.textContent = "n"; // Set <p> content to n
+                    }
+                }
+
+                // Serialize back to string
+                const serializer = new XMLSerializer();
+                const newXmlText = serializer.serializeToString(xmlDoc);
+
+                const blob = new Blob([newXmlText], { type: "application/xml" });
+                const download_link = document.createElement("a");
+                download_link.href = URL.createObjectURL(blob);
+                download_link.download = `${original_file_name}_Enloid2JploidFixer.vsqx`;
+                download_link.click();
+            };
+
+            reader.readAsText(file);
+        });
+    </script>
+</body>
+</html>
